<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jtorres.fallsmeter.MainActivity"
    tools:showIn="@layout/activity_main">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/classe_arrays"
        android:prompt="@string/classe_prompt"
        android:layout_toLeftOf="@+id/bt_start"
        android:layout_toStartOf="@+id/bt_start"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_start"
        android:id="@+id/bt_start"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/bt_stop"
        android:layout_toStartOf="@+id/bt_stop" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_Stop"
        android:id="@+id/bt_stop"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_Out"
        android:id="@+id/lbl_Out"
        android:layout_below="@+id/spinner1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lb_Gyro"
        android:id="@+id/lb_Gyro"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/lbl_Out"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_wear_acc"
        android:id="@+id/lb_wear_acc"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/lb_Gyro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lb_wear_gir"
        android:id="@+id/lb_wear_gir"
        android:layout_below="@+id/lb_wear_acc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp" />

</RelativeLayout>
